syntax ="proto3";
   message TaskObj {
    string id = 1;
    string description = 2;
    }

    message CreateRequest {
     string description = 1;
    }

    message RemoveRequest {
     string id = 1;
    }
    message Response {
     string message = 1;
    }




    service TodoService {
     rpc CreateTask(CreateRequest) returns (TaskObj);
     rpc RemoveTask(RemoveRequest) returns (Response);
     rpc UpdateTask(TaskObj) returns (Response);

    }